# tiders-rpc-client

./: .gitignore  BUILDING_PLAN.md  README.md  RINDEXER_COMPARISON.md  SPECIFICATION.md  cherry_rpc_client_flow.md
.github/workflows/: ci.yml  release.yml
rust/: Cargo.toml  clippy.toml
rust/src/: client.rs  config.rs  lib.rs  query.rs  response.rs
rust/src/convert/: arrow_convert.rs  block_range.rs  mod.rs
rust/src/rpc/: adaptive_concurrency.rs  arrow_convert.rs  block_adaptive_concurrency.rs  block_fetcher.rs  coordinator.rs  log_adaptive_concurrency.rs  log_fetcher.rs  mod.rs  multi_pipeline_stream.rs  provider.rs  receipt_fetcher.rs  shared_helpers.rs  single_block_adaptive_concurrency.rs  stream.rs  trace_fetcher.rs  tx_receipt_fetcher.rs
