[package]
name = "cherry-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.1", features = ["full", "json-rpc"] }
arrow = "56"
anyhow = "1"
cherry-evm-schema = { path = "../../cherry-core/evm-schema" }
futures-lite = "2"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1"
log = "0.4"
url = "2"

[dev-dependencies]
parquet = "56"
env_logger = "0.11"

# ============================================
# Using rust-magic-linter STANDARD PRESET so agents follows rust best practices
# ============================================
# Based on https://github.com/vicnaum/rust-magic-linte

[lints.clippy]
# Enable pedantic group for comprehensive checks
pedantic = { level = "warn", priority = -1 }

# === THE GUARDRAILS (Critical for AI Agents) ===
# Panic safety - agents must handle errors, not crash
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# The "no cheating" rule
allow_attributes = "deny"

# Code hygiene - no debug leftovers
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# === ASYNC SAFETY ===
await_holding_lock = "deny"       # Prevents deadlocks

# === PROCESS SAFETY ===
exit = "deny"                     # Libraries shouldn't exit

# === PEDANTIC RELAXATIONS ===
# These are too noisy for most projects
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
